--- a/index.html
+++ b/index.html
@@ -1708,7 +1708,7 @@
                     </div>
                     <div class="login-body">
                         <div class="login-instructions">
-                            <p><strong>Instrucciones:</strong> ingresa usuario y contraseñaÑ</p>
+                            <p><strong>Instrucciones:</strong> ingresa usuario y contraseña</p>
                         </div>
                         
                         <div class="form-group">
