--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <i class="fas fa-glass-cheers"></i>
+                <i class="logosalon azul.png"></i>
                 <h1>Salón Azul</h1>
             </div>
         </div>
