--- a/index.html
+++ b/index.html
@@ -1678,7 +1678,7 @@
     <header>
         <div class="container header-container">
             <div class="logo">
-                <img src="logosalon azul.png" alt="Logotipo Salón Azul" class="logo-img">
+                <img src="logosalon.png" alt="Logotipo Salón Azul" class="logo-img">
                 <h1>Salón Azul</h1>
             </div>
         </div>
