--- a/index.html
+++ b/index.html
@@ -1720,7 +1720,7 @@
                     </div>
                     <div class="login-body">
                         <div class="login-instructions">
-                            <p><strong>Instrucciones:</strong> Usuario: hiram2009</p>
+                            <p><strong>Instrucciones:</strong> introduce tu usuario y contraseña</p>
                         </div>
                         
                         <div class="form-group">
